--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.CSTAcademy2024" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.CSTAcademy2024" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/shark</item>
+        <item name="colorAccent">@color/school_bus_yellow</item>
+
+        <item name="android:statusBarColor">?attr/colorPrimary</item>
     </style>
 
     <style name="Theme.CSTAcademy2024" parent="Base.Theme.CSTAcademy2024" />
