--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.CSTAcademy2024" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.CSTAcademy2024" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/shark</item>
+        <item name="colorAccent">@color/school_bus_yellow</item>
+
+        <item name="android:statusBarColor">?attr/colorPrimary</item>
     </style>
 </resources>
