--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_padding">16dp</dimen>
+    <dimen name="default_padding_half">8dp</dimen>
+
+    <dimen name="default_corner_radius">16dp</dimen>
+
+    <dimen name="material_text_caption">12sp</dimen>
+    <dimen name="material_text_caption2">11sp</dimen>
+    <dimen name="material_text_caption3">8sp</dimen>
+    <dimen name="material_text_body1">14sp</dimen>
+    <dimen name="material_text_body2">13sp</dimen>
+    <dimen name="material_text_body3">10sp</dimen>
+    <dimen name="material_text_subhead">16sp</dimen>
+    <dimen name="material_text_subhead2">15sp</dimen>
+    <dimen name="material_text_head">18sp</dimen>
+    <dimen name="material_text_head2">17sp</dimen>
+    <dimen name="material_text_title">20sp</dimen>
+    <dimen name="material_text_title2">19sp</dimen>
+    <dimen name="material_text_headline">24sp</dimen>
+    <dimen name="material_text_headline2">30sp</dimen>
+    <dimen name="material_text_headline3">32sp</dimen>
+    <dimen name="material_text_headline4">40sp</dimen>
+    <dimen name="material_text_display1">34sp</dimen>
+    <dimen name="material_text_display2">45sp</dimen>
+    <dimen name="material_text_display3">56sp</dimen>
+    <dimen name="material_text_display4">100sp</dimen>
+    <dimen name="material_text_display5">112sp</dimen>
 </resources>
